# openvmm

./: Cargo.toml
.github/workflows/: openvmm-ci.yaml  openvmm-docs-ci.yaml  openvmm-docs-pr.yaml  openvmm-pr-release.yaml  openvmm-pr.yaml
ci-flowey/: openvmm-pr.yaml
flowey/flowey_core/src/: node.rs
flowey/flowey_hvlite/src/pipelines_shared/: gh_pools.rs
flowey/flowey_lib_hvlite/src/: build_openhcl_igvm_from_recipe.rs  run_igvmfilegen.rs
flowey/flowey_lib_hvlite/src/_jobs/: local_build_igvm.rs
openhcl/minimal_rt/: Cargo.toml
openhcl/openhcl_boot/src/: boot_logger.rs  cmdline.rs  dt.rs  hypercall.rs  main.rs  memory.rs  sidecar.rs
openhcl/openhcl_boot/src/host_params/: dt.rs  mod.rs  shim_params.rs
openhcl/underhill_attestation/src/: jwt.rs
openhcl/underhill_core/src/nvme_manager/: device.rs  manager.rs  mod.rs  save_restore_helpers.rs
openvmm/openvmm_core/: Cargo.toml
openvmm/openvmm_core/src/worker/: dispatch.rs
petri/burette/src/tests/: boot_time.rs  memory.rs  scale_boot.rs
petri/src/vm/: mod.rs
petri/src/vm/hyperv/: hyperv.psm1  mod.rs  powershell.rs
petri/src/vm/openvmm/: construct.rs  mod.rs  modify.rs  start.rs
support/crypto/: Cargo.toml
support/powershell_builder/src/: lib.rs
vm/loader/igvmfilegen/: Cargo.toml
vm/loader/igvmfilegen/src/: file_loader.rs  main.rs  measurement_diag.rs  platform_mask.rs  snp_id_block.rs
vm/loader/igvmfilegen/src/corim_signature/: envelope.rs  mod.rs
vm/loader/igvmfilegen/src/vp_context_builder/: tdx.rs
vmm_core/virt_whp/src/: apic.rs
vmm_core/vmotherboard/src/: base_chipset.rs
(+45 files in other folders)
