# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition.workspace = true
name = "igvmfilegen"
rust-version.workspace = true

[dependencies]
igvmfilegen_config.workspace = true
loader.workspace = true
loader_defs.workspace = true
product_policy.workspace = true

hvdef.workspace = true

memory_range.workspace = true
underhill_confidentiality.workspace = true
x86defs.workspace = true

anyhow.workspace = true
base64.workspace = true
bitfield-struct.workspace = true
clap = { workspace = true, features = ["derive"] }
crypto = { workspace = true, features = ["native", "vendored"] }
der = { workspace = true, features = ["derive", "pem", "alloc"] }
fs-err.workspace = true
hex = { workspace = true, features = ["serde"] }
igvm = { workspace = true, features = ["corim"] }
igvm_defs.workspace = true
range_map_vec.workspace = true
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
zerocopy.workspace = true

[dev-dependencies]
crypto = { workspace = true, features = ["test_helpers"] }
signature.workspace = true
test_with_tracing.workspace = true
x509-cert = { workspace = true, features = ["pem", "builder"] }

[lints]
workspace = true
